🚀 Major ATS Scoring Algorithm Upgrade: Advanced Semantic Analysis
- Implemented Claude-level accuracy multi-dimensional scoring
- Added semantic similarity using sentence transformers (all-MiniLM-L6-v2)
- Enhanced skills depth analysis with exact/partial/missing categorization
- Advanced experience depth evaluation (action verbs, metrics, achievements)
- Context-aware keyword matching for more accurate relevance
- Comprehensive skills database (programming, web, mobile, cloud, DevOps, data science)
- Intelligent multi-factor scoring (keyword 25%, semantic 25%, skills 20%, experience 15%, context 10%, structure 5%)
- Achievement impact detection with quantifiable metrics scoring
- Section detection expanded (skills, experience, education, achievements, projects)
- Generated detailed score breakdowns with component contributions
- Personalized actionable suggestions based on analysis results
- Added sentence-transformers for deep semantic understanding
- Improved keyword extraction and categorization
- Better handling of compound skills and skill relationships

Dependencies added:
- sentence-transformers==2.2.2
- torch==2.0.1
- transformers==4.35.2
- huggingface-hub==0.19.4

This represents a significant leap in accuracy from basic keyword matching to nuanced semantic understanding.

--- a/requirements_current.txt
+++ b/requirements_current.txt
@@ -57,3 +57,9 @@ watchfiles==1.1.1
 weasel==0.4.3
 websockets==15.0.1
 wrapt==2.0.1
+
+# Advanced semantic analysis
+sentence-transformers==2.2.2
+torch==2.0.1
+transformers==4.35.2
+huggingface-hub==0.19.4
