--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ pdfplumber==0.10.3
 spacy==3.8.11
 scikit-learn==1.4.0
 numpy==2.3.5
+sentence-transformers==2.2.2
+torch==2.0.1
 
 # Download spaCy model after installation:
 # python -m spacy download en_core_web_sm
